# effigy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: json-contracts.yml
docs/: README.md
docs/architecture/: 000-overview.md  010-package-map.md  011-multiprocess-tui-config-contract.md
docs/contracts/: json-schema-index.json  json-selection-contract.json
docs/guides/: 010-path-installation-and-release.md  011-output-widgets-and-colour-modes.md  012-dev-process-manager-tui.md  013-testing-orchestration.md  014-release-checklist-template.md  015-deferral-fallback-migration.md  016-task-routing-precedence.md  017-json-output-contracts.md  018-doctor-explain-mode.md  019-watch-init-migrate-phase-1.md  020-dag-lock-policy-baseline.md  021-quick-start-and-command-cookbook.md  022-manifest-cookbook.md  023-troubleshooting-and-failure-recipes.md  024-ci-and-automation-recipes.md  025-command-reference-matrix.md  026-json-payload-examples.md  027-copy-paste-snippets.md  028-docs-flow-map.md  028-migration-quick-paths.md  README.md
docs/reports/: 2026-02-26-deferral-fallback-phase-2-1-checkpoint.md  2026-02-26-dev-process-manager-tui-phase-4-checkpoint.md  2026-02-26-effigy-extraction-and-migration-checkpoint.md  2026-02-27-catalogs-diagnostics-validation.md  (+29 more)
scripts/: check-doc-links.sh  check-json-contracts-ci.sh  check-json-contracts.sh  check-selection-artifact-validator-smoke.sh  validate-json-contract-selection-artifact.sh
src/: dev_tui.rs  lib.rs  process_manager.rs  resolver.rs  runner.rs  testing.rs
tests/: cli_output_tests.rs  process_manager_tests.rs
(+71 files in other folders)
