[package]
name = "effigy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Unified task runner with nested catalog resolution"

[dependencies]
anstream = "0.6"
anstyle = "1"
indicatif = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.20"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.29"
nix = { version = "0.29", default-features = false, features = ["process", "signal"] }
vt100 = "0.15.2"
indexmap = { version = "2", features = ["serde"] }
